# perse

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
.github/workflows/: cicd-perse.dev.yml  cicd-perse.yml  cicd.yml
perse/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  rustc-ice-2024-07-21T13_02_50-37368.txt  rustc-ice-2024-07-21T13_02_50-37369.txt  rustc-ice-2024-07-21T13_02_51-37372.txt  rustc-ice-2024-07-21T13_02_51-37373.txt  rustc-ice-2024-07-21T13_02_51-37376.txt  rustc-ice-2024-07-21T13_02_51-37377.txt  rustc-ice-2024-07-21T13_02_51-37378.txt  rustc-ice-2024-07-21T13_02_51-37379.txt  rustc-ice-2024-07-21T13_02_52-37380.txt  rustc-ice-2024-07-21T13_02_52-37381.txt  rustc-ice-2024-07-21T13_03_14-37479.txt  rustc-ice-2024-07-21T13_03_14-37480.txt  rustc-ice-2024-07-21T13_03_15-37481.txt  rustc-ice-2024-07-21T13_03_15-37482.txt  rustc-ice-2024-07-21T13_03_15-37485.txt  rustc-ice-2024-07-21T13_03_15-37486.txt  rustc-ice-2024-07-21T13_03_15-37489.txt  rustc-ice-2024-07-21T13_03_15-37490.txt  rustc-ice-2024-07-21T13_03_15-37491.txt  rustc-ice-2024-07-21T13_03_15-37492.txt  rustc-ice-2024-07-21T13_07_02-37658.txt  rustc-ice-2024-07-21T13_07_02-37659.txt  rustc-ice-2024-07-21T13_07_02-37662.txt  rustc-ice-2024-07-21T13_07_02-37663.txt  rustc-ice-2024-07-21T13_07_03-37664.txt  rustc-ice-2024-07-21T13_07_03-37665.txt  rustc-ice-2024-07-21T13_07_03-37667.txt  rustc-ice-2024-07-21T13_07_03-37668.txt  rustc-ice-2024-07-21T13_07_03-37669.txt  rustc-ice-2024-07-21T13_07_03-37670.txt  rustc-ice-2024-07-21T13_08_07-37805.txt  rustc-ice-2024-07-21T13_08_07-37806.txt  rustc-ice-2024-07-21T13_08_08-37810.txt  rustc-ice-2024-07-21T13_08_08-37811.txt  (+388 more)
perse.dev/: index.html
perse.dev/assets/css/: style.css
perse/perse_controller/: Cargo.toml  README.md
perse/perse_controller/src/: lib.rs
perse/perse_core/: Cargo.toml  README.md
perse/perse_core/migrations/: README.md
perse/perse_core/src/: lib.rs  main.rs
perse/perse_core/src/modules/: mod.rs
perse/perse_core/themes/default/assets/: index.backup.html
perse/perse_core/themes/default/style/: main.scss
perse/perse_data/: .env.example  Cargo.toml  README.md
perse/perse_data/migrations/: 20240611101315_add_views.down.sql  20240611101315_add_views.up.sql  20240715121746_add_home_flag.down.sql  20240715121746_add_home_flag.up.sql
perse/perse_data/src/: lib.rs
perse/perse_data/src/views/: model.rs  schema.rs
perse/perse_utils/: Cargo.toml  README.md
perse/perse_utils/src/: errors.rs  lib.rs  results.rs
perse/perse_view/: Cargo.toml  README.md
perse/perse_view/src/: create_view.rs  lib.rs  views.rs
perse/perse_view/src/components/: loader.rs  mod.rs  navbar.rs  stylesheet.rs  view_list.rs
perse/perse_view/src/views/: create_view.rs  errors.rs  home.rs  mod.rs  new.rs
perse/perse_view/src/views/components/: initial_state.rs  loader.rs  mod.rs  view_list.rs
perse/src/: db.rs  lib.rs  main.rs
perse/themes/default/style/: main.scss
