
###################
# Perse Workspace
###################

[workspace]
resolver = "2"
members = [
  "perse_core",
  "perse_controller",
  "perse_data",
  "perse_view",
]

[workspace.package]
version = "0.1.15"

[workspace.lints.rust]
unsafe_code = "forbid"
unused-extern-crates = "warn"
unused-features = "warn"

[workspace.dependencies]
##########################
### Perse `dependencies`
##########################
perse = { path = "./perse_core", version = "=0.1.13" }
perse_controller = { path = "./perse_controller", version = "=0.1.5" }
perse_data = { path = "./perse_data", version = "=0.1.1" }
perse_view = { path = "./perse_view", version = "=0.1.3" }

###########################
### Leptos `dependencies`
###########################
leptos = { version = "=0.6.11", features = ["nightly"] }
leptos_meta = { version = "=0.6.11", features = ["nightly"] }
leptos_router = { version = "=0.6.11", features = ["nightly"] }
leptos_actix = { version = "=0.6.11" }
http = { version = "=1.1.0" }
cfg-if = { version = "=1" }

##########################
### Leptos Configuration
##########################
[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[workspace.metadata.cargo-all-features]
denylist = ["actix-files", "actix-web", "leptos_actix"]
skip_feature_sets = [["csr", "ssr"], ["csr", "hydrate"], ["ssr", "hydrate"]]
