
###################
# Perse Workspace
###################

[workspace]
resolver = "2"
members = [
  "perse_core",
  "perse_controller",
  "perse_data",
  "perse_view",
]

[workspace.package]
version = "0.1.16"
readme = "README.md"
description = "Perse is a site-builder."
repository = "https://github.com/alexwatever/perse"
authors = ["Alex Watson <hello@perse.dev>"]
license = "MPL-2.0"
edition = "2021"

[workspace.lints.rust]
unsafe_code = "forbid"
unused-features = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unstable_features = "warn"

[workspace.dependencies]
##########################
### Perse `dependencies`
##########################
perse = { path = "./perse_core", version = "=0.1.14" }
perse_controller = { path = "./perse_controller", version = "=0.1.6" }
perse_data = { path = "./perse_data", version = "=0.1.2" }
perse_view = { path = "./perse_view", version = "=0.1.4" }
actix-web = { version = "4.5.8", features = ["macros"] }
tracing = "0.1.40"

###########################
### Leptos `dependencies`
###########################
leptos = { version = "=0.6.12", features = ["nightly"] }
leptos_meta = { version = "=0.6.12", features = ["nightly"] }
leptos_router = { version = "=0.6.12", features = ["nightly"] }
leptos_actix = { version = "=0.6.12" }
# Leptos requires v0.2.87
wasm-bindgen = { version = "=0.2.87" }
http = { version = "1.1.0" }
cfg-if = { version = "1" }

##########################
### Leptos Configuration
##########################
[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[workspace.metadata.cargo-all-features]
denylist = ["actix-files", "actix-web", "leptos_actix"]
skip_feature_sets = [["csr", "ssr"], ["csr", "hydrate"], ["ssr", "hydrate"]]
