
###################
# Perse Workspace
###################

[workspace]
resolver = "2"
members = [
  "perse_core",
  "perse_controller",
  "perse_data",
  "perse_view",
]

[workspace.package]
version = "0.2.0"
readme = "README.md"
description = "Perse is a site-builder."
repository = "https://github.com/alexwatever/perse"
authors = ["Alex Watson <hello@perse.dev>"]
license = "MPL-2.0"
edition = "2021"

[workspace.lints.rust]
unsafe_code = "forbid"
unused-features = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unstable_features = "warn"

[workspace.dependencies]
##########################
### Perse `dependencies`
##########################
perse_controller = { path = "./perse_controller", version = "=0.2.0" }
perse_data = { path = "./perse_data", version = "=0.2.0" }
perse_utils = { path = "./perse_utils", version = "=0.2.0" }
perse_view = { path = "./perse_view", version = "=0.2.0" }
actix-web = { version = "4.5.8", features = ["macros"] }
chrono = { version = "0.4.38", features = ["serde"] }
parse-display = { version = "0.9.1" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.117" }
# version 0.7.4 and above of sqlx gives dependency errors or conflicts
sqlx = { version = "=0.7.3", features = [ "postgres", "runtime-tokio", "macros", "json", "uuid", "chrono", "tls-native-tls" ] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = { version = "0.1.40" }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
validator = { version = "0.18.1", features = ["derive"] }

###########################
### Leptos `dependencies`
###########################
leptos = { version = "=0.6.12", features = ["nightly"] }
leptos_meta = { version = "=0.6.12", features = ["nightly"] }
leptos_router = { version = "=0.6.12", features = ["nightly"] }
leptos_actix = { version = "=0.6.12" }
server_fn = { version = "=0.6.12" }
# Leptos requires v0.2.87
wasm-bindgen = { version = "=0.2.87" }
http = { version = "1.1.0" }
cfg-if = { version = "1" }

##########################
### Leptos Configuration
##########################
[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[workspace.metadata.cargo-all-features]
denylist = ["actix-files", "actix-web", "leptos_actix", "sqlx"]
skip_feature_sets = [["csr", "ssr"], ["csr", "hydrate"], ["ssr", "hydrate"]]
