
####################
# Perse Controller
####################

[package]
name = "perse_controller"
version = "0.1.2"
edition = "2021"
authors = ["Alex Watson <hello@perse.dev>"]
repository = "https://github.com/alexwatever/perse"
readme = "../README.md"
license = "MPL-2.0"

[dependencies]
leptos = { workspace = true }
leptos_meta = { workspace = true }
leptos_actix = { workspace = true, optional = true }
leptos_router = { workspace = true }
http = { workspace = true, optional = true }

[features]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos_actix",
  "dep:http",
]
csr = [
  "leptos/csr",
  "leptos_meta/csr",
  "leptos_router/csr",
]
