
####################
# Perse Controller
####################

[package]
name = "perse_controller"
version = "0.2.1"
readme.workspace = true
description.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
perse_data.workspace = true
perse_utils.workspace = true
perse_view.workspace = true
leptos.workspace = true
leptos_actix = { workspace = true, optional = true }
leptos_meta.workspace = true
leptos_router.workspace = true

[features]
hydrate = [
  "leptos/hydrate",
  "leptos_meta/hydrate",
  "leptos_router/hydrate",
]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos_actix",
]
csr = [
  "leptos/csr",
  "leptos_meta/csr",
  "leptos_router/csr",
]
