
##############
# Perse Data
##############

[package]
name = "perse_data"
version = "0.1.2"
readme.workspace = true
description.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
perse_utils = { workspace = true }

cfg-if.workspace = true
dotenv = { version = "0.15.0", optional = true }
once_cell = { version = "1.19.0", optional = true }
serde.workspace = true
# version 0.7.4 of sqlx gives dependency errors or conflicts
sqlx = { version = "=0.7.3", optional = true, features = [ "postgres", "runtime-tokio", "tls-native-tls", "macros", "uuid", "chrono", "bigdecimal", "json" ] }
validator.workspace = true

[features]
ssr = [
  "dep:dotenv",
  "dep:sqlx",
  "dep:once_cell",
]
