
##############
# Perse Data
##############

[package]
name = "perse_data"
version = "0.1.2"
readme.workspace = true
description.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
perse_utils = { workspace = true }

cfg-if.workspace = true
dotenv = { version = "0.15.0", optional = true }
once_cell = { version = "1.19.0", optional = true }
parse-display.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, optional = true }
# tokio.workspace = true
uuid.workspace = true
validator.workspace = true

[features]
ssr = [
  "dep:dotenv",
  "dep:sqlx",
  "dep:once_cell",
]
