
####################
# Perse Utils
####################

[package]
name = "perse_utils"
version = "0.1.0"
readme.workspace = true
description.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
cfg-if.workspace = true
parse-display.workspace = true
serde.workspace = true
server_fn.workspace = true
sqlx = { workspace = true, optional = true }
tracing.workspace = true
validator.workspace = true

[features]
ssr = [
  "dep:sqlx",
]
