
####################
# Perse Utils
####################

[package]
name = "perse_utils"
version = "0.1.1"
readme.workspace = true
description.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
cfg-if.workspace = true
parse-display.workspace = true
serde.workspace = true
serde_json.workspace = true
server_fn.workspace = true
sqlx = { workspace = true, optional = true }
tracing.workspace = true
validator.workspace = true

[features]
ssr = [
  "dep:sqlx",
]
